--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,11 +8,13 @@ on:
 jobs:
   dockerbuild:
     uses: eclipse-xfsc/dev-ops/.github/workflows/dockerbuild.yml@main
+    secrets: inherit
     with: 
       dockerfile: "deployment/docker"
       harbor_config: "deployment/harbor.config"
   helm:
     uses: eclipse-xfsc/dev-ops/.github/workflows/helm.yml@main
+    secrets: inherit
     with: 
       buildContext:  "deployment/helm"
       harbor_config: "deployment/harbor.config"
