--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     uses: eclipse-xfsc/dev-ops/.github/workflows/dockerbuild.yml@main
     secrets: inherit
     with: 
-      dockerfile: "deployment/docker"
+      dockerfile: "deployment/docker/Dockerfile"
       harbor_config: "deployment/harbor.config"
   helm:
     uses: eclipse-xfsc/dev-ops/.github/workflows/helm.yml@main
