--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM eclipse-temurin:21-jre-alpine
-ARG JAR_FILE=target/creation-wizard-api.jar
+FROM maven:3.9.6-eclipse-temurin-21 AS builder
+
+WORKDIR /app
 
 COPY pom.xml .
 
@@ -7,10 +8,11 @@ RUN mvn dependency:go-offline
 
 COPY . .
 
-RUN mvn clean install
+RUN mvn clean package -DskipTests
 
-COPY ${JAR_FILE} /app.jar
+FROM eclipse-temurin:21-jre-alpine
 
+ARG JAR_FILE=target/creation-wizard-api.jar
+COPY --from=builder /app/target/*.jar /app.jar
 COPY shapes/ /shapes/
-
 ENTRYPOINT ["java","-jar","/app.jar"]
